--- a/medicinetracker/package.json
+++ b/medicinetracker/package.json
@@ -14,9 +14,7 @@
         "cordova-plugin-whitelist": "1.3.3"
     },
     "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {}
-        },
+        "plugins": {},
         "platforms": [
             "android"
         ]
