--- a/medicinetracker/package.json
+++ b/medicinetracker/package.json
@@ -14,7 +14,9 @@
         "cordova-plugin-whitelist": "1.3.3"
     },
     "cordova": {
-        "plugins": {},
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        },
         "platforms": [
             "android"
         ]
