--- a/medicinetracker/package.json
+++ b/medicinetracker/package.json
@@ -10,8 +10,8 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "7.0.0",
-        "cordova-plugin-whitelist": "1.3.3",
+        "cordova-android": "^7.0.0",
+        "cordova-plugin-whitelist": "^1.3.3",
         "vis": "4.21.0"
     },
     "cordova": {
