--- a/medicinetracker/package.json
+++ b/medicinetracker/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "cordova-android": "^7.0.0",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "vis": "4.21.0"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "android",
